Fixed alignment of handles on social slice

--- a/site/pages/about-us/social-slice/twitter-tile/styles.css
+++ b/site/pages/about-us/social-slice/twitter-tile/styles.css
@@ -27,7 +27,7 @@
 .handle {
   composes: boldSansSerif from "../../../../css/typography/_fonts.css";
   composes: fontXS from "../../../../css/typography/_fonts.css";
-  margin: 20px 20px 10px 20px;
+  margin: 10px 20px 10px 20px;
 }
 
 .tweet {
